# homework

./: .env.example  .flake8  README.md  main.py  processing.py  pyproject.toml
coverage_html_report/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
coverage_report/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_file_readers_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_search_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api.py  file_readers.py  generators.py  main.py  masks.py  processing.py  search.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_file_readers.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_search.py  test_utils.py  test_widget.py
