[project]
name = "homework"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = "^3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]

[tool.mypy]
exclude = 'venv'
disallow_untyped_defs = true
warn_return_any = true

[tool.black]
exclude = '.git'
skip-string-normalization = true
line-length = 119

[tool.isort]
profile = "black"
line_length = 119